@@ -1,5 +1,5 @@
-![alt XOOPS CMS](https://xoops.org/images/logoXoops4GithubRepository.png)
-## Waiting module for [XOOPS CMS 2.5.9+](https://xoops.org)
+![alt XOOPS CMS](https://xoops.org/images/logoXoopsPhp8.png)
+## Waiting module for [XOOPS CMS 2.5.10+](https://xoops.org)
 [![XOOPS CMS Module](https://img.shields.io/badge/XOOPS%20CMS-Module-blue.svg)](https://xoops.org)
 [![Software License](https://img.shields.io/badge/license-GPL-brightgreen.svg?style=flat)](https://www.gnu.org/licenses/gpl-2.0.html)
 
